# verilog-behavioral-simulator

./: BUGS  CHANGELOG  CHANGELOG1  CONTRIBUTORS  COPYRIGHT  FAQ  README  vbs.1  vbs.txt
EXAMPLES/: .#stmt010_nbassign.v.1.1.1.1  000module.v  contrib_cntdec.v  contrib_cnte.v  contrib_div.v  contrib_inst.v  contrib_mem.v  contrib_mux.v  contrib_net1.v  contrib_psrn.v  dec001_delay.v  dec002_posneg.v  dec003_posneg.v  expr_concat.v  expr_div.v  expr_invert.v  expr_mult.v  expr_signcmp.v  expr_ternary.v  ivl.sh  mi002_always.v  mi003_modinst.v  mi006_assign.v  mi011_wiredecl.v  stmt001_task.v  stmt002_bassign.v  stmt003_if.v  stmt004_ifelse.v  stmt010_nbassign.v  testv-all.tmpl  wt_4_3p03p03p03p0.v  x_allev.v  x_counter.v  x_cport.v  x_dae.v  x_delayedloop.v  x_display.v  x_dividev1.v  x_dividev2.v  x_divmain.v  (+17 more)
src/: Makefile.in  config.h.in  configure  configure.in  main.cc  p_expr.cc  p_expr.h  p_misc.cc  p_misc.h  p_moditm.cc  p_moditm.h  p_stmt.cc  p_stmt.h  p_types.h  parser.c  parser.h  sim.cc  sim.h  vbs.cc  vbs.h  vbs.l  vbs.y  version.h  vpi_user.c  vpi_user.h
src/common/: bvector.cc  bvector.h  combase.h  debug.cc  debug.h  dstack.h  dumpasc.cc  dumpasc.h  dumpinfo.cc  dumpinfo.h  dumpstrm.cc  dumpstrm.h  dumpvcd.cc  dumpvcd.h  error.cc  error.h  event.h  hash.cc  hash.h  logic.h  ptr.h  scp_tab.cc  scp_tab.h  st_eval.cc  st_eval.h  st_func.cc  st_func.h  st_inst.cc  st_inst.h  st_mod.cc  st_mod.h  st_mon.cc  st_mon.h  st_net.cc  st_net.h  st_node.h  st_setup.cc  st_setup.h  st_task.cc  st_task.h  (+8 more)
src/expr/: binary_op.cc  binary_op.h  concat.cc  concat.h  eeval.cc  eeval.h  emon.cc  emon.h  erdwr.cc  erdwr.h  esetup.cc  esetup.h  etrigger.cc  etrigger.h  exprbase.cc  exprbase.h  funccall.cc  funccall.h  mintypmax.cc  mintypmax.h  number.cc  number.h  qstr.cc  qstr.h  rangeid.cc  rangeid.h  ternary_op.cc  ternary_op.h  unary_op.cc  unary_op.h
src/misc/: bitsel.cc  bitsel.h  decbase.h  decrdwr.cc  decrdwr.h  decsetup.cc  decsetup.h  dectrig.cc  dectrig.h  delayid.cc  delayid.h  delaynum.cc  delaynum.h  evntexpr.cc  evntexpr.h  lvalue.cc  lvalue.h  mmon.cc  mmon.h  module.cc  module.h  mrdwr.cc  mrdwr.h  msetup.cc  msetup.h  mtrigger.cc  mtrigger.h  partsel.cc  partsel.h  port.cc  port.h  portconn.cc  portconn.h  selbase.h
src/moditm/: always.cc  always.h  cassign.cc  cassign.h  d_int.cc  d_int.h  d_io.cc  d_io.h  d_net.cc  d_net.h  d_param.cc  d_param.h  d_rdwr.cc  d_rdwr.h  d_reg.cc  d_reg.h  d_setup.cc  d_setup.h  d_time.cc  d_time.h  func.cc  func.h  initial.cc  initial.h  mibase.h  mirdwr.cc  mirdwr.h  misetup.cc  misetup.h  mitfbase.h  modinst.cc  modinst.h  task.cc  task.h  tfbase.h  tfrdwr.cc  tfrdwr.h  tfsetup.cc  tfsetup.h
src/stmt/: assign.cc  assign.h  case.cc  case.h  display.cc  display.h  dumptsk.cc  dumptsk.h  finish.cc  finish.h  ifelse.cc  ifelse.h  loopstmt.cc  loopstmt.h  monitor.cc  monitor.h  random.cc  random.h  readmem.cc  readmem.h  seqblk.cc  seqblk.h  srdwr.cc  srdwr.h  ssetup.cc  ssetup.h  stime.cc  stime.h  stmtbase.h  strigger.cc  strigger.h  strobe.cc  strobe.h  taskenbl.cc  taskenbl.h  write.cc  write.h  xtime.cc  xtime.h
src/swig/: vbs_api.cc  vbs_swig.i
src/tests/: testbv.cc  testdb.cc  testeq.cc  testptr.cc  testst.cc  testtw.cc
unsupported/EXAMPLES.err/: Readme  casedef.v  fmtspec.v  fmtsym.v  fmtterm.v  funcdela.v  keyword.v  misscomma.v  missqoute.v  missword.v  rangerev.v  undefxxx.v
unsupported/doc/: Impl_decisions  Impl_details  Intro  README  References  Supported
